--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,11 @@
                         <input type="number" id="limb-value" min="0" max="4" value="0">
                     </div>
 
+                    <div class="rating-inputs-verification">
+                        <label for="verification-checkbox">Нужна верификация:</label>
+                        <input type="checkbox" id="verification-checkbox">
+                    </div>
+
                     <button id="add-rating-btn" class="add-rating-button">Добавить оценку</button>
                 </div>
                 <h3>Оценки для этого видео:</h3>
@@ -82,6 +87,7 @@
                                 <th>Конец:</th>
                                 <th>Оценка</th>
                                 <th>Конечность</th>
+                                <th>Нужна верификация</th>
                                 <th>Действия</th>
                             </tr>
                         </thead>
